Insert asciidoctor rendering into more places.